# mda

./: .env.example  .gitignore  .mcp.json  =0.2.0  CHANGELOG.md  CLAUDE.md  Cursor_Notepad_教程.md  MDA标准流程架构v3.md  Makefile  PIM引擎MVP实施计划.md  PIM引擎实现示例.py  PIM执行引擎实施路线图.md  PIM执行引擎架构设计.md  PROJECT_SUMMARY.md  PYLANCE_IMPORT_SOLUTION.md  README.md  README_VSCODE.md  SECURITY_CHECK.md  SETUP.md  agent_create_subagent_knowledge_added.md  agent_knowledge.md  check_ignored_important_files.sh  create_agent_contract_function.md  debug_routes.py  deepseek_reasoner_file_writing_issue.md  deepseek_reasoner_fix_implemented.md  enterprise_architecture.docx  enterprise_architecture.md  enterprise_architecture_with_images.md  fastapi动态加载.md  fix_ada_implementation.md  fix_deepseek_write_file_issue.md  fix_self_awareness_implementation.md  generate_knowledge_index.py  hello.py  knowledge_function_index.json  mda.code-workspace  mda.py  mda开发流程.md  navigation_links_update.md  (+41 more)
pim-compiler/: .env.example  .gitignore  ARCHITECTURE_CHANGES.md  CHANGELOG.md  ENHANCED_FEATURES.md  GEMINI_KNOWLEDGE.md  GENERATOR_COMPARISON.md  GENERATOR_GUIDE.md  GENERATOR_TEST_RESULTS.md  HOW_AGENT_UNDERSTANDS_TOOLS.md  KNOWLEDGE_INJECTION_GUIDE.md  LANGCHAIN_CACHE.md  MEMORY_FEATURE_README.md  MEMORY_SOLUTION.md  MEMORY_USAGE_GUIDE.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  README_SIMPLIFIED.md  REAL_TEST_SUMMARY.md  SUCCESS_SUMMARY.md  TYPE_FIXES_SUMMARY.md  V3_VS_V4_COMPARISON.md  __init__.py  action架构.md  agent  agent-cli  agent_cli_bugs_found.md  agent_cli_diagnostic_logging_guide.md  agent_cli_diagnostics_summary.json  agent_cli_fixes_summary.md  agent_cli_performance_optimization_summary.py  agent_cli_test_report.md  agent_cli_v2_test_final_summary.md  agent_cli动态执行架构总结.md  agent_cli已知的问题.md  agent_cli架构问题分析.md  agent_research2.ipynb  architecture_design.md  blog_generation_summary.md  (+143 more)
pim-compiler/agent_cli/: CONNECTIONIST_SUMMARY.md  LANGCHAIN_TOOLS_GUIDE.md  MIGRATION_GUIDE.md  OPTIMIZATION_ROADMAP.md  README.md  README_AGENT_FRAMEWORK.md  README_REASONING.md  README_v3.md  SUMMARY.md  __init__.py  __init___v2.py  __main__.py  __main___v2.py  agent_cli系统架构.md  compatibility.py  context_compressor.py  core.py  core_v2.py  core_v2_improved.py  core_v2_new.py  core_v3_enhanced.py  debug_decision.py  debug_write_decision.py  decision_optimizer.py  demo_architecture.py  demo_context_compression.py  demo_reasoning.py  demo_test.py  dependency_analyzer.py  enhanced_logging.py  examples.py  examples_langchain.py  executors.py  file_cache_optimizer.py  file_content_manager.py  improved_core_patch.py  improved_planner.py  improved_planner_v2.py  main.py  migrate_to_v2.py  (+13 more)
pim-compiler/api/: comments.py
pim-compiler/blog_management_output/: README.md
pim-compiler/blog_management_output_v2/: .env.example  README.md  config.py  main.py  requirements.txt  system_design_summary.md
pim-compiler/blog_management_output_v3/: .env.template  (+4 more)
pim-engine/: .env.development  .env.example  .env.llm.example  Dockerfile  Dockerfile.llm  Dockerfile.llm.cn  PIM加载执行流程.md  PIM架构设计v2.md  README.md  README_v2.md  TODO.md  ai_result.json  build-cn.sh  build-with-proxy.sh  check_gemini_cli.sh  cleanup.sh  conftest.py  demo_ui.sh  docker-compose.llm.yml  docker-compose.local.yml  docker-compose.yml  gemini-cli-update.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_gemini_tests.sh  run_in_screen.sh  run_local.sh  run_puppeteer_test.sh  run_tests.py  run_tests_async.sh  setup.cfg  setup.py  setup_local.sh  start-quick.sh  start-with-gemini-linux.sh  start-with-gemini.sh  start.sh  start_local.sh  start_local_bg.sh  (+19 more)
(+2651 files in other folders)
