[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pim-compiler"
version = "3.0.0"
description = "PIM Compiler with Agent CLI support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-experimental>=0.0.47",
    "pydantic>=2.0",
    "requests",
    "pathlib",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
include = ["agent_cli*", "src*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100