[metadata]
name = pim-engine
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_paths = src
python_files = test_*.py
addopts = --import-mode=importlib

[mypy]
mypy_path = src
namespace_packages = True

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[pycodestyle]
max-line-length = 100