[tool.pyright]
include = ["*.py", "core/*.py", "knowledge/*.md"]
exclude = ["**/node_modules", "**/__pycache__", ".git"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
extraPaths = ["."]
reportMissingImports = false

[tool.pylint]
ignore = ["CVS"]
ignore-patterns = ["test_.*\\.py$"]
init-hook = 'import sys; sys.path.insert(0, ".")'

[project]
name = "nltm-react"
version = "1.0.0"
description = "Natural Language Turing Machine - 自然语言图灵机"
authors = [
    {name = "NLTM Team", email = "nltm@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pylint"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"